--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,6 +5,7 @@ metadata:
   description: Python app that displays time information.
   annotations:
     github.com/project-slug: saagarsvs05/python-app
+    backstage.io/techdocs-ref: dir:.
 spec:
   type: service
   owner: development
